fixed subhead on mobile res

--- a/_sass/typesetting.scss
+++ b/_sass/typesetting.scss
@@ -125,7 +125,7 @@ nav a:hover{
 
 
   .page-title-sub {
-    
+
   font-size: .8em;
   color: #9a9696;
   padding: .6em 1em 0 0;
@@ -134,6 +134,11 @@ nav a:hover{
   border-radius: .3rem;
   margin: 0;
   text-transform: uppercase;
+
+  @include responsive(tiny-screens){
+    padding: .6em .41em 0 0;
+  }
+
   }
 
 .page-title{
